Changelog for "Apache xml-security" <http://santuario.apache.org/>

New in v1.5.1-SNAPSHOT:
    Fixed SANTUARIO-296 - XMLSignatureInput fails with an IOException if constructed on a BufferedInputStream
    Fixed SANTUARIO-298 - Xalan is still a required dependency
    Fixed SANTUARIO-299 - StringIndexOutOfBoundsException is thrown during reference verification (if URI = "#")
    Fixed SANTUARIO-297 - Exceptions should use a JDK exception cause mechanism

New in v1.5.0:
    Fixed SANTUARIO-295: XMLDSig XPathFilter2Transform bug involving intersect filter
    Fixed SANTUARIO-282: RSA-OAEP key transport is limited to SHA-1 digests.
    Fixed SANTUARIO-293: Support XML Encryption 1.1 Key Wrapping test-cases.
    Fixed SANTUARIO-292: Add the ability to access the dereferenced Elements after signature validation in the non-JSR-105 API.
    Fixed SANTUARIO-290: Add a secure validation switch for signature processing
    Fixed SANTUARIO-255: Port JSR 105 code to JDK 1.5.
    Fixed SANTUARIO-288: Add support for GCM algorithms via a third-party Crypto provider.
    Fixed SANTUARIO-287: Rename org.jcp package in the 1.5 release.
    Fixed SANTUARIO-284: ElementProxy#getTextFromChildElement() doesn't get all of the text if the element contains an entity like &amp;
    Fixed SANTUARIO-273: xml:base attribute not processed correctly in C14N11 canonicalization.
    Fixed SANTUARIO-260: Review logging
    Fixed SANTUARIO-257: Use JUnit4 for testing
    Fixed SANTUARIO-256: Port non-JSR 105 code to use JDK 1.5.
    Fixed SANTUARIO-269: Register default algorithms/implementations dynamically.
    Fixed SANTUARIO-283: JSR105 does not retain namespace definitions on Object element when unmarshalling
    Fixed SANTUARIO-254: Rework org.apache.xml.security.utils.resolver.ResourceResolver.
    Fixed SANTUARIO-248: Add support for ECDSA signature with SHA-2 message digests + enhancements in ASN.1 to XMLDSIG converter (and viceversa)

New in v.1.4.6