@@ -19,6 +19,9 @@
 package org.apache.xml.security.encryption;
 
 import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.io.UnsupportedEncodingException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -57,6 +60,19 @@ public abstract class AbstractSerializer implements Serializer {
     }
 
     /**
+     * Returns a <code>byte[]</code> representation of the specified
+     * <code>Element</code>.
+     *
+     * @param element the <code>Element</code> to serialize.
+     * @return the <code>byte[]</code> representation of the serilaized
+     *   <code>Element</code>.
+     * @throws Exception
+     */
+    public byte[] serializeToByteArray(Element element) throws Exception {
+        return canonSerializeToByteArray(element);
+    }
+
+    /**
      * Returns a <code>String</code> representation of the specified
      * <code>NodeList</code>.
      * <p/>
@@ -91,6 +107,25 @@ public abstract class AbstractSerializer implements Serializer {
     }
 
     /**
+     * Returns a <code>byte[]</code> representation of the specified
+     * <code>NodeList</code>.
+     * 
+     * @param content the <code>NodeList</code> to serialize.
+     * @return the <code>byte[]</code> representation of the serialized
+     *   <code>NodeList</code>.
+     * @throws Exception
+     */
+    public byte[] serializeToByteArray(NodeList content) throws Exception {
+        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        canon.setWriter(baos);
+        canon.notReset();
+        for (int i = 0; i < content.getLength(); i++) {
+            canon.canonicalizeSubtree(content.item(i));
+        }
+        return baos.toByteArray();
+    }
+
+    /**
      * Use the Canonicalizer to serialize the node
      * @param node
      * @return the canonicalization of the node
@@ -107,12 +142,78 @@ public abstract class AbstractSerializer implements Serializer {
     }
 
     /**
+     * Use the Canonicalizer to serialize the node
+     * @param node
+     * @return the (byte[]) canonicalization of the node
+     * @throws Exception
+     */ 
+    public byte[] canonSerializeToByteArray(Node node) throws Exception {
+        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        canon.setWriter(baos);
+        canon.notReset();
+        canon.canonicalizeSubtree(node);
+        return baos.toByteArray();
+    }
+
+    /**
      * @param source
      * @param ctx
      * @return the Node resulting from the parse of the source
      * @throws XMLEncryptionException
      */
     public abstract Node deserialize(String source, Node ctx) throws XMLEncryptionException;
+
+    /**
+     * @param source
+     * @param ctx
+     * @return the Node resulting from the parse of the source
+     * @throws XMLEncryptionException
+     */
+    public abstract Node deserialize(byte[] source, Node ctx) throws XMLEncryptionException;
+
+    protected static byte[] createContext(byte[] source, Node ctx) throws XMLEncryptionException {
+        // Create the context to parse the document against
+        ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+        try {
+            OutputStreamWriter outputStreamWriter = new OutputStreamWriter(byteArrayOutputStream, "UTF-8");
+            outputStreamWriter.write("<?xml version=\"1.0\" encoding=\"UTF-8\"?><dummy");
+
+            // Run through each node up to the document node and find any xmlns: nodes
+            Map<String, String> storedNamespaces = new HashMap<String, String>();
+            Node wk = ctx;
+            while (wk != null) {
+                NamedNodeMap atts = wk.getAttributes();
+                if (atts != null) {
+                    for (int i = 0; i < atts.getLength(); ++i) {
+                        Node att = atts.item(i);
+                        String nodeName = att.getNodeName();
+                        if ((nodeName.equals("xmlns") || nodeName.startsWith("xmlns:"))
+                                && !storedNamespaces.containsKey(att.getNodeName())) {
+                            outputStreamWriter.write(" ");
+                            outputStreamWriter.write(nodeName);
+                            outputStreamWriter.write("=\"");
+                            outputStreamWriter.write(att.getNodeValue());
+                            outputStreamWriter.write("\"");
+                            storedNamespaces.put(nodeName, att.getNodeValue());
+                        }
+                    }
+                }
+                wk = wk.getParentNode();
+            }
+            outputStreamWriter.write(">");
+            outputStreamWriter.flush();
+            byteArrayOutputStream.write(source);
+
+            outputStreamWriter.write("</dummy>");
+            outputStreamWriter.close();
+
+            return byteArrayOutputStream.toByteArray();
+        } catch (UnsupportedEncodingException e) {
+            throw new XMLEncryptionException("empty", e);
+        } catch (IOException e) {
+            throw new XMLEncryptionException("empty", e);
+        }
+    }
     
     protected static String createContext(String source, Node ctx) {
         // Create the context to parse the document against
