@@ -42,7 +42,19 @@ public interface Serializer {
      *   <code>Element</code>.
      * @throws Exception
      */
+    @Deprecated
     String serialize(Element element) throws Exception;
+
+    /**
+     * Returns a <code>byte[]</code> representation of the specified
+     * <code>Element</code>.
+     *
+     * @param element the <code>Element</code> to serialize.
+     * @return the <code>byte[]</code> representation of the serilaized
+     *   <code>Element</code>.
+     * @throws Exception
+     */
+    byte[] serializeToByteArray(Element element) throws Exception;
 
     /**
      * Returns a <code>String</code> representation of the specified
@@ -53,15 +65,36 @@ public interface Serializer {
      *   <code>NodeList</code>.
      * @throws Exception
      */
+    @Deprecated
     String serialize(NodeList content) throws Exception;
+
+    /**
+     * Returns a <code>byte[]</code> representation of the specified
+     * <code>NodeList</code>.
+     * 
+     * @param content the <code>NodeList</code> to serialize.
+     * @return the <code>byte[]</code> representation of the serialized
+     *   <code>NodeList</code>.
+     * @throws Exception
+     */
+    byte[] serializeToByteArray(NodeList content) throws Exception;
 
     /**
      * Use the Canonicalizer to serialize the node
      * @param node
      * @return the canonicalization of the node
      * @throws Exception
-     */ 
+     */
+    @Deprecated
     String canonSerialize(Node node) throws Exception;
+
+    /**
+     * Use the Canonicalizer to serialize the node
+     * @param node
+     * @return the (byte[]) canonicalization of the node
+     * @throws Exception
+     */ 
+    byte[] canonSerializeToByteArray(Node node) throws Exception;
 
     /**
      * @param source
@@ -69,5 +102,14 @@ public interface Serializer {
      * @return the Node resulting from the parse of the source
      * @throws XMLEncryptionException
      */
+    @Deprecated
     Node deserialize(String source, Node ctx) throws XMLEncryptionException;
+
+    /**
+     * @param source
+     * @param ctx
+     * @return the Node resulting from the parse of the source
+     * @throws XMLEncryptionException
+     */
+    Node deserialize(byte[] source, Node ctx) throws XMLEncryptionException;
 }
